--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -90,6 +90,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a href="{{ url_for('home') }}" class="nav-link {% if request.endpoint == 'home' %}active{% endif %}">
+                                <i class="fas fa-pen-nib me-2"></i>Home Content
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="{{ url_for('schedule') }}" class="nav-link {% if request.endpoint == 'schedule' %}active{% endif %}">
                                 <i class="fas fa-calendar me-2"></i>Schedule & Lectures
                             </a>
